<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="SERVER_URL">http://server-toolive.rhcloud.com/v1</string>
    <string name="url_login">/login</string>
    <string name="url_register">/register</string>
    <string name="hello">Hello World, TooLive!</string>
    <string name="app_name">TooLive</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_register_prompt">New to TooLive? Click here to register</string>
    <string name="register_already">Already have an accounot? Click here to login</string>
    <string name="login_button_text">Login</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_comfirm_password">Comfirm Password</string>
    <string name="register_button">Register</string>
    <string name="no_internet">An Internet connection was not found</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="missing_fields">One or more fields are empty</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_credentials">The credentials entered are invalid</string>
    <string name="title_activity_categories_list_view">CategoriesListViewActivity</string>

</resources>
